# moviedb

./: .credentials  .gitignore  Cargo.toml  moviedb  rustfmt.toml
src/: add.rs  app.rs  args.rs  config.rs  config_tmdb.rs  config_trakt.rs  database.rs  draw.rs  drawer.rs  formatter.rs  helpers.rs  image_backend.rs  input_handler.rs  key_event_handler.rs  list.rs  main.rs  omdb.rs  tmdb.rs  trakt.rs  tui.rs  types.rs  update_json.rs  widgets.rs
src/config/: config_omdb.rs  config_tmdb.rs  config_trakt.rs  mod.rs
src/custom/: helpers.rs  hyperlink.rs  mod.rs
src/image_backends/: chafa.rs  mod.rs  ratatui_image.rs
src/popups/: add_movie.rs  delete_movie.rs  edit_movie.rs  error.rs  fetch_artworks.rs  mod.rs  omdb_init.rs  out_of_box.rs  remove_movie.rs  tmdb_init.rs  trakt_init.rs
src/screens/: init_screen.rs  main_screen.rs  mod.rs  movies_list.rs
src/screens/main_screen/: mod.rs  movie_description.rs  movies_list.rs
src/tokens/: mod.rs  omdb_tokens.rs  tmdb_tokens.rs  trakt_tokens.rs
