[package]
name = "moviedb"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.54", features = ["derive"] }
cocoon = { version = "0.4.3", features = ["thiserror"] }
crossterm = "0.29.0"
dirs = "6.0.0"
env_logger = "0.11.8"
image = "0.25.9"
itertools = "0.14.0"
json = "0.12.4"
log = "0.4.29"
nucleo-matcher = "0.3.1"
rand = "0.9.2"
ratatui = "0.30.0"
ratatui-image = { version = "10.0.2", features = ["crossterm"] }
ratatui-macros = "0.7.0"
reqwest = { version = "0.13.1", features = ["blocking", "json", "query"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
thiserror = "2.0.17"
throbber-widgets-tui = "0.10.0"
tui-input = "0.15.0"
unix-ts = "1.0.0"
tui-textarea = { path = "tui-textarea" }
