[package]
name = "moviedb"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
cocoon = { version = "0.4.3", features = ["thiserror"] }
dirs = "6.0.0"
env_logger = "0.11.8"
image = "0.25.9"
itertools = "0.14.0"
log = "0.4.29"
nucleo-matcher = "0.3.1"
rand = "0.9.2"
ratatui = "0.30.0"
ratatui-image = { version = "10.0.2", features = ["crossterm"] }
reqwest = { version = "0.13.1", features = ["blocking", "json", "query"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
throbber-widgets-tui = "0.10.0"
unix-ts = "1.0.0"
num-derive = "0.4.2"
num-traits = "0.2.19"
ratatui-textarea = "0.9.0"
