[package]
name = "moviedb"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.45", features = ["serde"] }
dirs = "6.0.0"
image = "0.25.10"
itertools = "0.14.0"
log = "0.4.32"
nucleo-matcher = "0.3.1"
rand = "0.10.1"
ratatui = "0.30.2"
ratatui-image = { version = "11.0.4", features = ["crossterm"] }
reqwest = { version = "0.13.4", features = ["blocking", "json", "query"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
throbber-widgets-tui = "0.11.0"
unix-ts = "1.0.0"
num-derive = "0.4.2"
num-traits = "0.2.19"
ratatui-textarea = "0.9.1"
simple-encrypt = "0.1.3"
fern = { version = "0.7.1", features = ["colored", "chrono"] }
